# open-libra

./: .gitignore  Cargo.toml
config/protocol-constants/: Cargo.toml
config/protocol-constants/src/: lib.rs
crates/ol-bitvec/: Cargo.toml
crates/ol-bitvec/src/: lib.rs
crates/ol-crypto/: Cargo.toml
crates/ol-crypto-derive/: Cargo.toml
crates/ol-crypto-derive/src/: hasher.rs  lib.rs  unions.rs
crates/ol-crypto/benches/: bls12381.rs  ed25519.rs  hash.rs  noise.rs  ristretto255.rs  secp256k1.rs
crates/ol-crypto/src/: compat.rs  error.rs  hash.rs  hkdf.rs  lib.rs  multi_ed25519.rs  noise.rs  test_utils.rs  traits.rs  validatable.rs  vdf.rs  x25519.rs
crates/ol-infallible/: Cargo.toml
crates/ol-infallible/src/: lib.rs  math.rs  mutex.rs  nonzero.rs  rwlock.rs  time.rs
crates/ol-keygen/: Cargo.toml
crates/ol-keygen/src/: lib.rs  main.rs
crates/ol-log-derive/: Cargo.toml
crates/ol-log-derive/src/: lib.rs
crates/ol-logger/: Cargo.toml
crates/ol-logger/src/: counters.rs  event.rs  filter.rs  kv.rs  lib.rs  logger.rs  macros.rs  metadata.rs  ol_logger.rs  sample.rs  security.rs  telemetry_log_writer.rs  tracing_adapter.rs
crates/ol-metrics-core/: Cargo.toml
crates/ol-metrics-core/src/: const_metric.rs  lib.rs  op_counters.rs
crates/ol-proptest-helpers/: Cargo.toml
crates/ol-proptest-helpers/src/: growing_subset.rs  lib.rs  repeat_vec.rs  unit_tests.rs  value_generator.rs
language/block-executor/: Cargo.toml
language/block-executor/benches/: scheduler_benches.rs
language/block-executor/src/: counters.rs  errors.rs  executor.rs  lib.rs  output_delta_resolver.rs  scheduler.rs  task.rs  txn_last_input_output.rs  view.rs
language/e2e-tests/: Cargo.toml
language/e2e-tests/goldens/: language_e2e_testsuite__tests__create_account__create_account.exp  language_e2e_testsuite__tests__module_publishing__bad_module_address.exp  language_e2e_testsuite__tests__scripts__script_bad_sig_function_dep.exp  language_e2e_testsuite__tests__scripts__script_code_unverifiable.exp  language_e2e_testsuite__tests__scripts__script_nested_type_argument_module_does_not_exist.exp  language_e2e_testsuite__tests__scripts__script_non_existing_function_dep.exp  language_e2e_testsuite__tests__verify_txn__test_arbitrary_script_execution.exp  language_e2e_testsuite__tests__verify_txn__test_open_publishing.exp  language_e2e_testsuite__tests__verify_txn__test_open_publishing_invalid_address.exp
language/e2e-tests/src/: account.rs  account_universe.rs  common_transactions.rs  compile.rs  data_store.rs  executor.rs  gas_costs.rs  golden_outputs.rs  lib.rs  on_chain_configs.rs  proptest_types.rs
language/e2e-tests/src/account_universe/: bad_transaction.rs  create_account.rs  peer_to_peer.rs  universe.rs
language/e2e-tests/src/execution_strategies/: basic_strategy.rs  guided_strategy.rs  mod.rs  multi_strategy.rs  random_strategy.rs  types.rs
language/e2e-testsuite/: Cargo.toml
language/e2e-testsuite/src/: lib.rs
language/e2e-testsuite/src/tests/: create_account.rs  data_store.rs  execution_strategies.rs  failed_transaction_tests.rs  genesis.rs  genesis_initializations.rs  mint.rs  mod.rs  module_publishing.rs  on_chain_configs.rs  peer_to_peer.rs  scripts.rs  transaction_fuzzer.rs  verify_txn.rs
language/e2e-testsuite/src/tests/account_universe/: bad_transaction.rs  create_account.rs  mod.rs  peer_to_peer.rs
language/framework/: Cargo.toml
language/framework/cached-packages/: Cargo.toml  build.rs
language/framework/open-libra/: Move.toml
language/framework/src/: built_package.rs  docgen.rs  extended_checks.rs  lib.rs  main.rs  module_metadata.rs  open_libra.rs  prover.rs  release_builder.rs  release_bundle.rs  released_framework.rs
language/move-hashmap/: Cargo.toml
language/move-hashmap/src/: lib.rs
language/move-hashmap/src/unit_tests/: mod.rs  proptest_types.rs
language/ol-aggregator/: Cargo.toml
language/ol-aggregator/src/: aggregator_extension.rs  delta_change_set.rs  lib.rs  module.rs  transaction.rs
language/ol-gas/: Cargo.toml
language/ol-gas-algebra-ext/: Cargo.toml
language/ol-gas/src/: algebra.rs  gas_meter.rs  gen.rs  instr.rs  lib.rs  misc.rs  move_stdlib.rs  natives.rs  ol_framework.rs  params.rs  table.rs
language/ol-gas/src/transaction/: mod.rs  storage.rs
language/ol-vm/: Cargo.toml
language/ol-vm/src/: access_path_cache.rs  adapter_common.rs  counters.rs  data_cache.rs  delta_state_view.rs  errors.rs  foreign_contracts.rs  lib.rs  logging.rs  natives.rs  ol_vm.rs  ol_vm_impl.rs  read_write_set_analysis.rs  system_module_names.rs  transaction_metadata.rs
language/ol-vm/src/block_executor/: mod.rs  vm_wrapper.rs
language/ol-vm/src/move_vm_ext/: mod.rs  resolver.rs  session.rs  vm.rs
language/ol-vm/src/verifier/: mod.rs  module_init.rs  resource_groups.rs  transaction_arg_validation.rs  view_function.rs
language/ol-writeset-generator/: Cargo.toml
language/ol-writeset-generator/src/: admin_script_builder.rs  lib.rs  writeset_builder.rs
language/ol-writeset-generator/templates/: disable_parallel_execution.move  halt_transactions.move  initialize_parallel_execution.move  remove_validators.move
language/package-builder/: Cargo.toml
language/transaction-builder/: Cargo.toml
language/transaction-builder/examples/rust/: script_fun_demo.rs
language/transaction-builder/src/: common.rs  golang.rs  lib.rs  main.rs  rust.rs
language/vm-genesis/: Cargo.toml
language/vm-genesis/src/: genesis_context.rs  lib.rs
storage/state-view/: Cargo.toml
types/: Cargo.toml
types/src/: access_path.rs  account_address.rs  account_state.rs  account_view.rs  aggregate_signature.rs  base_coin.rs  block_info.rs  block_metadata.rs  chain_id.rs  contract_event.rs  core_coin.rs  epoch_change.rs  epoch_state.rs  event.rs  governance.rs  ledger_info.rs  lib.rs  mempool_status.rs  move_resource.rs  ol_coin.rs  proptest_types.rs  state_proof.rs  timestamp.rs  trusted_state.rs  validator_config.rs  validator_info.rs  validator_performance.rs  validator_signer.rs  validator_verifier.rs  vesting.rs  vm_status.rs  waypoint.rs  write_set.rs
(+225 files in other folders)
