[workspace]
resolver = "2"

members = [
    "types",
    "crates/ol-bitvec",
    "crates/ol-crypto",
    "crates/ol-crypto-derive",
]

exclude = []

# NOTE: default-members is the complete list of binaries that form the "production OL codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "types"
]

# All workspace members should inherit these keys
# for package declarations.
[workspace.package]
authors = ["0L <opensource@0l.network>"]
edition = "2021"
homepage = "https://0l.network"
license = "Apache-2.0"
publish = false
repository = "https://github.com/0LNetworkCommunity/open-libra"
rust-version = "1.64"

[workspace.dependencies]
# Internal crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
ol-types = { path = "types" }
ol-bitvec = { path = "crates/ol-bitvec" }
ol-crypto = { path = "crates/ol-crypto" }
ol-crypto-derive = { path = "crates/ol-crypto-derive" }

# External crate dependencies.
# Please do not add any test features here: they should be declared by the individual crate.
again = "0.1.2"
anyhow = "1.0.62"
arc-swap = "1.5.0"
arr_macro = "0.1.3"
assert_approx_eq = "1.1.0"
assert_unordered = "0.1.1"
async-stream = "0.3"
async-trait = "0.1.53"
axum = "0.5.16"
base64 = "0.13.0"
backtrace = "0.3.58"
bcs = { git = "https://github.com/diem/bcs.git", rev = "30ce9f4ac51342d2fb4c04c4f5b40683d9652dc6" }
better_any = "0.1.1"
bigdecimal = { version = "0.3.0", features = ["serde"] }
bitvec = "0.19.4"
blake2 = "0.10.4"
blake2-rfc = "0.2.18"
blst = "0.3.7"
byteorder = "1.4.3"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["clock", "serde"] }
cfg-if = "1.0.0"
claims = "0.7"
clap = { version = "3.2.17", features = ["derive", "env", "suggestions"] }
clap_complete = "3.2.3"
codespan-reporting = "0.11.1"
console-subscriber = "0.1.6"
const_format = "0.2.26"
criterion = "0.3.5"
criterion-cpu-time = "0.1.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.4"
crossbeam-queue = "0.3.5"
curve25519-dalek = "3"
dashmap = "5.2.0"
datatest-stable = "0.1.1"
debug-ignore = { version = "1.0.3", features = ["serde"] }
diesel = { version = "2.0.0", features = ["chrono", "postgres", "r2d2", "numeric", "serde_json"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
digest = "0.9.0"
dir-diff = "0.3.2"
dirs = "4.0.0"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
ed25519-dalek-bip32 = "0.2.0"
either = "1.6.1"
enum_dispatch = "0.3.8"
env_logger = "0.9.0"
erased-serde = "0.3.13"
event-listener = "2.5.3"
fail = "0.5.0"
field_count = "0.1.1"
flate2 = "1.0.24"
fs_extra = "1.2.0"
futures = "= 0.3.24" # Previously futures v0.3.23 caused some consensus network_tests to fail. We now pin the dependency to v0.3.24.
futures-channel = "= 0.3.24"
futures-util = "0.3.21"
gcp-bigquery-client = "0.13.0"
get_if_addrs = "0.5.3"
glob = "0.3.0"
goldenfile = "1.1.0"
handlebars = "4.2.2"
heck = "0.3.2"
hex = "0.4.3"
hkdf = "0.10.0"
hostname = "0.3.1"
http = "0.2.3"
httpmock = "0.6"
hyper = { version = "0.14.18", features = ["full"] }
hyper-tls = "0.5.0"
include_dir = { version = "0.7.2", features = ["glob"] }
indicatif = "0.15.0"
indoc = "1.0.6"
ipnet = "2.5.0"
itertools = "0.10.3"
jemallocator = { version = "0.3.2", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
json-patch = "0.2.6"
jsonwebtoken = "8.1"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_15"] }
kube = { version = "0.51.0", features = ["jsonpatch"] }
libfuzzer-sys = "=0.3.2"
libsecp256k1 = "0.7.0"
log = "0.4.17"
lru = "0.7.5"
lz4 = "1.24.0"
maplit = "1.0.2"
mime = "0.3.16"
mirai-annotations = "1.12.0"
mockall = "0.11.0"
more-asserts = "0.3.0"
native-tls = "0.2.10"
ntest = "0.9.0"
num_cpus = "1.13.1"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.10.0"
owo-colors = "3.5.0"
parking_lot = "0.12.0"
paste = "1.0.7"
pbjson = "0.4.0"
percent-encoding = "2.1.0"
pin-project = "1.0.10"
poem = { version = "1.3.40", features = ["anyhow", "rustls"] }
poem-openapi = { version = "2.0.10", features = ["swagger-ui", "url"] }
pretty_assertions = "1.2.1"
procfs = "0.14.1"
proc-macro2 = "1.0.38"
project-root = "0.2.2"
prometheus = { version = "0.13.0", default-features = false }
prometheus-http-query = "0.5.2"
# Necessary until this lands: https://github.com/ccakes/prometheus-parse-rs/pull/6.
prometheus-parse = { git = "https://github.com/banool/prometheus-parse-rs", rev = "b65a1f20c5c604a9d2d1e545f70ca51ea8da2354" }
proptest = "1.0.0"
proptest-derive = "0.3.0"
prost = "0.11.3"
prost-types = "0.10.1"
quanta = "0.10.1"
quote = "1.0.18"
rand = "0.7.3"
rand_core = "0.5.1"
rayon = "1.5.2"
regex = "1.5.5"
reqwest = { version = "0.11.11", features = ["blocking", "cookies", "json", "stream"] }
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
ring = { version = "0.16.20", features = ["std"] }
ripemd = "0.1.1"
rocksdb = { version = "0.19.0", features = ["lz4"] }
rstest = "0.15.0"
rusty-fork = "0.3.0"
sha-1 = "0.10.0"
sha2 = "0.9.3"
sha3 = "0.9.1"
siphasher = "0.3.10"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_bytes = "0.11.6"
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_repr = "0.1"
serde-name = "0.1.1"
serde-generate = { git = "https://github.com/corynthian/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
serde-reflection = { git = "https://github.com/corynthian/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
serde_yaml = "0.8.24"
shadow-rs = "0.16.2"
smallvec = "1.8.0"
static_assertions = "1.1.0"
stats_alloc = "0.1.8"
strum = "0.24.1"
strum_macros = "0.24.2"
structopt = "0.3.21"
substreams = "0.0.17"
syn = { version = "1.0.92", features = ["derive", "extra-traits"] }
sysinfo = "0.24.2"
tempfile = "3.3.0"
termcolor = "1.1.2"
textwrap = "0.15.0"
thiserror = "1.0.37"
tiny-bip39 = "0.8.2"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
trybuild = "1.0.41"
tokio = { version = "1.21.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.8"
tokio-test = "0.4.1"
tokio-util = { version = "0.7.2", features = ["compat", "codec"] }
toml = "0.5.9"
tonic = { version = "0.8.3", features = ["tls-roots", "transport", "prost", "gzip", "codegen"] }
ureq = { version = "1.5.4", features = ["json", "native-tls"], default_features = false }
url = { version = "2.2.2", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
walkdir = "2.3.2"
warp = { version = "0.3.2", features = ["tls"] }
warp-reverse-proxy = "0.5.0"
which = "4.2.5"
x25519-dalek = "1.2.0"

# Note: the BEGIN and END comments below are required for external tooling. Do not remove.
# BEGIN MOVE DEPENDENCIES
move-abigen = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-binary-format = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-cli = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-command-line-common = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-compiler ={ git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-core-types = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62", features = ["address32"] }
move-docgen = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-ir-compiler = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-model = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-package = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-prover = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-prover-boogie-backend = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-stackless-bytecode = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-prover-test-utils = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-resource-viewer = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-stackless-bytecode-interpreter = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-stdlib = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-symbol-pool = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-table-extension = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-transactional-test-runner = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
move-unit-test = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62", features = ["table-extension"] }
move-vm-runtime = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62", features = ["lazy_natives"] }
move-vm-test-utils = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62", features = ["table-extension"] }
move-vm-types = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
read-write-set = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
read-write-set-dynamic = { git = "https://github.com/move-language/move", rev = "b860816481ab5e7be077c531f0d57fae3567fc62" }
# END MOVE DEPENDENCIES

[profile.release]
debug = true
overflow-checks = true

# The performance build is not currently recommended
# for production deployments. It has not been widely tested.
[profile.performance]
inherits = "release"
opt-level = 3
debug = true
overflow-checks = true
lto = true
codegen-units = 1

[profile.cli]
inherits = "release"
debug = false
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[profile.bench]
debug = true

# This is a temporary workaround to avoid multiple library
# definitions for LZ4 (caused by rust-rocksdb).
# This will be removed once our pull requests land.
# https://github.com/rust-rocksdb/rust-rocksdb/issues/666
[patch.crates-io]
rocksdb = { git = 'https://github.com/rust-rocksdb/rust-rocksdb' }
serde-reflection = { git = "https://github.com/corynthian/serde-reflection", rev = "839aed62a20ddccf043c08961cfe74875741ccba" }
