[package]
name = "ol-language-e2e-tests"
description = "Move language e2e testing framework"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
ol-bitvec = { workspace = true }
ol-cached-packages ={ workspace = true }
ol-crypto = { workspace = true, features = ["fuzzing"] }
ol-framework = { workspace = true }
ol-gas = { workspace = true }
ol-keygen = { workspace = true }
ol-proptest-helpers = { workspace = true }
ol-state-view = { workspace = true }
ol-types = { workspace = true }
ol-vm = { workspace = true }
ol-vm-genesis = { workspace = true }
bcs = { workspace = true }
goldenfile = { workspace = true }
hex = { workspace = true }
move-binary-format = { workspace = true }
move-command-line-common = { workspace = true }
move-core-types = { workspace = true }
move-ir-compiler = { workspace = true }
move-vm-types = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
