[package]
name = "language-e2e-testsuite"
description = "Move language e2e tests"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ol-block-executor = { workspace = true }
ol-cached-packages = { workspace = true }
ol-crypto = { workspace = true }
ol-framework = { workspace = true }
ol-gas = { workspace = true, features = ["testing"] }
ol-keygen = { workspace = true }
ol-language-e2e-tests = { workspace = true }
ol-logger = { workspace = true }
ol-state-view = { workspace = true }
ol-types = { workspace = true }
ol-vm = { workspace = true }
ol-vm-genesis = { workspace = true }
ol-writeset-generator = { workspace = true }
bcs = { workspace = true }
itertools = { workspace = true }
move-binary-format = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-core-types = { workspace = true }
move-ir-compiler = { workspace = true }
proptest = { workspace = true }
serde = { workspace = true }

[features]
default = ["ol-cached-packages/fuzzing"]
