[package]
name = "ol-move-hashmap"
description = "Move hash map"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
ol-aggregator = { workspace = true }
ol-infallible = { workspace = true }
ol-types = { workspace = true }
bcs = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
rayon = { workspace = true }
