[package]
name = "ol-aggregator"
description = "Source aggregator for the 0L blockchain"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
ol-crypto = { workspace = true }
ol-state-view = { workspace = true }
ol-types = { workspace = true }
bcs = { workspace = true }
better_any = { workspace = true }
move-binary-format = { workspace = true }
move-core-types = { workspace = true }
move-table-extension = { workspace = true }
once_cell = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
claims = { workspace = true }

[features]
default = []
