[package]
name = "ol-vm"
description = "0L VM runtime"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
ol-aggregator = { workspace = true }
ol-block-executor = { workspace = true }
ol-crypto = { workspace = true }
ol-crypto-derive = { workspace = true }
ol-framework =  { workspace = true }
ol-gas = { workspace = true }
ol-logger = { workspace = true }
ol-metrics-core = { workspace = true }
ol-move-hashmap = { workspace = true }
ol-state-view = { workspace = true }
ol-types = { workspace = true }
bcs = { workspace = true }
dashmap = { workspace = true }
fail = { workspace = true }
move-binary-format = { workspace = true }
move-bytecode-utils = { workspace = true }
move-bytecode-verifier = { workspace = true }
move-core-types = { workspace = true }
move-stdlib = { workspace = true }
move-table-extension = { workspace = true }
move-unit-test = { workspace = true, optional = true }
move-vm-runtime = { workspace = true }
move-vm-test-utils = { workspace = true }
move-vm-types = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
read-write-set-dynamic = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ol-types = { workspace = true }
proptest = { workspace = true }

[features]
default = []
mirai-contracts = []
fuzzing = ["move-core-types/fuzzing", "move-binary-format/fuzzing", "move-vm-types/fuzzing", "ol-framework/fuzzing"]
failpoints = ["fail/failpoints", "move-vm-runtime/failpoints"]
testing = ["move-unit-test", "ol-framework/testing"]
