[package]
name = "ol-writeset-generator"
description = "Generating writesets used for incident management"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
ol-cached-packages =  { workspace = true }
ol-crypto = { workspace = true }
ol-crypto-derive = { workspace = true }
ol-framework =  { workspace = true }
ol-gas = { workspace = true }
ol-state-view = { workspace = true }
ol-types = { workspace = true }
ol-vm = { workspace = true }
bcs = { workspace = true }
handlebars = { workspace = true }
move-command-line-common = { workspace = true }
move-compiler = { workspace = true }
move-core-types = { workspace = true }
move-vm-runtime = { workspace = true }
move-vm-types = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
