[package]
name = "ol-transaction-builder"
description = "0L transaction-builder"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
ol-types = { workspace = true }
bcs = { workspace = true }
heck = { workspace = true }
move-core-types = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
serde-generate = { workspace = true }
serde-reflection = { workspace = true }
serde_yaml = { workspace = true }
structopt = { workspace = true }
textwrap = { workspace = true }

[dev-dependencies]
ol-cached-packages = { workspace = true }
ol-framework = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }

[features]
default = []
